[package]
name = "fastdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
crc = "3.0.1"
crossbeam-channel = "0.5.8"
glob = "0.3.1"
io-uring = "0.6.0"
opencv = { version = "0.81.3", optional = true }
prost = "0.11.9"
rand = "0.8.5"
rayon = "1.7.0"
slab = "0.4.8"
thiserror = "1.0.40"
zune-jpeg = "0.3.17"
zune-png = "0.2.1"
dlpark = { git = "https://github.com/SunDoge/dlpark.git" }
kanal = "0.1.0-pre8"

[build-dependencies]
prost-build = "0.11.9"


[features]

default = ["opencv"]

opencv = ["dep:opencv"]
