[package]
name = "fastdata-tfrecord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
prost = "0.11.9"
crc32c = "0.6.3"
slab = "0.4.8"
thiserror = "1.0.40"
io-uring = "0.6.0"
kanal = "0.1.0-pre8"
memmap2 = "0.6.2"

[dev-dependencies]
clap = { version = "4.3.0", features = ["derive"] }
glob = "0.3.1"
kanal = "0.1.0-pre8"
prost-build = "0.11.9"
rayon = "1.7.0"
