[package]
name = "withpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
dlpark = { git = "https://github.com/SunDoge/dlpark.git" }
fastdata = { path = "../../", features = ["opencv"]}
rayon = "1.7.0"
opencv = { version = "0.81.3", default-features = false, features = [
    "imgcodecs",
    "imgproc",
] }
glob = "0.3.1"
prost = "0.11.9"
kanal = { version = "0.1.0-pre8" }
